// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component renders correctly 1`] = `
<div>
  <div>
    <table
      class="MuiTable-root Table-root-1 Table-evenColor-3"
    >
      <thead
        class="MuiTableHead-root ColorPair-root-13 ColorPair-pearl-15"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Head Row - Cell 1
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Head Row - Cell 2
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 1 - Cell 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 1 - Cell 2
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 2 - Cell 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 2 - Cell 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table component renders correctly without width 1`] = `
<div>
  <div>
    <table
      class="MuiTable-root Table-root-39 Table-evenColor-41"
    >
      <thead
        class="MuiTableHead-root ColorPair-root-51 ColorPair-pearl-53"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Head Row - Cell 1
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Head Row - Cell 2
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 1 - Cell 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 1 - Cell 2
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 2 - Cell 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 2 - Cell 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table component renders medium table with no border 1`] = `
<div>
  <div>
    <table
      class="MuiTable-root Table-root-153 Table-noBorder-154"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body ColorPair-root-165 ColorPair-pearl-167"
          >
            Head Row - Cell 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 1 - Cell 1
          </td>
        </tr>
        <tr
          class="MuiTableRow-root Table-separator-158"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body ColorPair-root-165 ColorPair-pearl-167"
          >
            Head Row - Cell 2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 1 - Cell 2
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body ColorPair-root-165 ColorPair-pearl-167"
          >
            Head Row - Cell 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 2 - Cell 1
          </td>
        </tr>
        <tr
          class="MuiTableRow-root Table-separator-158"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body ColorPair-root-165 ColorPair-pearl-167"
          >
            Head Row - Cell 2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 2 - Cell 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table component renders small table with no border 1`] = `
<div>
  <div>
    <div
      class="Table-smallTable-197 Table-itemevenColor-201 Table-noBorder-192"
    >
      <dl
        class="Table-item-198"
      >
        <dt
          class="Table-title-199"
        >
          Head Row - Cell 1
        </dt>
        <dd
          class="Table-description-200"
        >
          Row 1 - Cell 1
        </dd>
        <dt
          class="Table-title-199"
        >
          Head Row - Cell 2
        </dt>
        <dd
          class="Table-description-200"
        >
          Row 1 - Cell 2
        </dd>
      </dl>
      <dl
        class="Table-item-198"
      >
        <dt
          class="Table-title-199"
        >
          Head Row - Cell 1
        </dt>
        <dd
          class="Table-description-200"
        >
          Row 2 - Cell 1
        </dd>
        <dt
          class="Table-title-199"
        >
          Head Row - Cell 2
        </dt>
        <dd
          class="Table-description-200"
        >
          Row 2 - Cell 2
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`Table component renders table head with different ColorPair 1`] = `
<div>
  <div>
    <table
      class="MuiTable-root Table-root-77 Table-evenColor-79"
    >
      <thead
        class="MuiTableHead-root ColorPair-root-89 ColorPair-blue900-103"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Head Row - Cell 1
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Head Row - Cell 2
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 1 - Cell 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 1 - Cell 2
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 2 - Cell 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 2 - Cell 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table component renders with reduced size - fixed two columns if normal table is too big to contain 1`] = `
<div>
  <div>
    <table
      class="MuiTable-root Table-root-115"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body ColorPair-root-127 ColorPair-pearl-129"
          >
            Head Row - Cell 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 1 - Cell 1
          </td>
        </tr>
        <tr
          class="MuiTableRow-root Table-separator-120"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body ColorPair-root-127 ColorPair-pearl-129"
          >
            Head Row - Cell 2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 1 - Cell 2
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body ColorPair-root-127 ColorPair-pearl-129"
          >
            Head Row - Cell 1
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 2 - Cell 1
          </td>
        </tr>
        <tr
          class="MuiTableRow-root Table-separator-120"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body ColorPair-root-127 ColorPair-pearl-129"
          >
            Head Row - Cell 2
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Row 2 - Cell 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table component renders with reduced size - list view if both normal and medium table are too big to contain 1`] = `
<div>
  <div>
    <div
      class="Table-smallTable-247 Table-itemevenColor-251"
    >
      <dl
        class="Table-item-248"
      >
        <dt
          class="Table-title-249"
        >
          Head Row - Cell 1
        </dt>
        <dd
          class="Table-description-250"
        >
          Row 1 - Cell 1
        </dd>
        <dt
          class="Table-title-249"
        >
          Head Row - Cell 2
        </dt>
        <dd
          class="Table-description-250"
        >
          Row 1 - Cell 2
        </dd>
      </dl>
      <dl
        class="Table-item-248"
      >
        <dt
          class="Table-title-249"
        >
          Head Row - Cell 1
        </dt>
        <dd
          class="Table-description-250"
        >
          Row 2 - Cell 1
        </dd>
        <dt
          class="Table-title-249"
        >
          Head Row - Cell 2
        </dt>
        <dd
          class="Table-description-250"
        >
          Row 2 - Cell 2
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`Table component renders without TableBody 1`] = `
<div>
  <div>
    <table
      class="MuiTable-root Table-root-291"
    >
      <tbody
        class="MuiTableBody-root"
      />
    </table>
  </div>
</div>
`;

exports[`Table component renders without striped rows 1`] = `
<div>
  <div>
    <div
      class="Table-smallTable-285"
    >
      <ul
        class="Table-item-286"
      >
        <li
          class="Table-description-288"
        >
          Row 1 - Cell 1
        </li>
        <li
          class="Table-description-288"
        >
          Row 1 - Cell 2
        </li>
      </ul>
      <ul
        class="Table-item-286"
      >
        <li
          class="Table-description-288"
        >
          Row 2 - Cell 1
        </li>
        <li
          class="Table-description-288"
        >
          Row 2 - Cell 2
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Table component without header renders with reduced size - list view even if there is enough space 1`] = `
<div>
  <div>
    <div
      class="Table-smallTable-235 Table-itemoddColor-240"
    >
      <ul
        class="Table-item-236"
      >
        <li
          class="Table-description-238"
        >
          Row 1 - Cell 1
        </li>
        <li
          class="Table-description-238"
        >
          Row 1 - Cell 2
        </li>
      </ul>
      <ul
        class="Table-item-236"
      >
        <li
          class="Table-description-238"
        >
          Row 2 - Cell 1
        </li>
        <li
          class="Table-description-238"
        >
          Row 2 - Cell 2
        </li>
      </ul>
    </div>
  </div>
</div>
`;
